WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274262
REGRESSION(
271747@main
): Toggling visibility on canvas parent undoes the effect of clearRect()
https://bugs.webkit.org/show_bug.cgi?id=274262
Summary
REGRESSION(271747@main): Toggling visibility on canvas parent undoes the effe...
Simon Fraser (smfr)
Reported
2024-05-16 08:29:09 PDT
Created
attachment 471423
[details]
Test case from the reporter Translated from
https://forums.developer.apple.com/forums/thread/751730
: After drawing on the canvas in the Safari browser, execute clearRect(). After that, if you set visibility: hidden on the parent div of the canvas, the drawing that was supposed to be erased will be restored. However, the parent div is no longer drawn because visibility: hidden is working normally. Also, this phenomenon seems to be affected by the browser's magnification rate. At least on the Macbook Air listed below, this only occurs when the magnification is 100%. This phenomenon does not seem to occur in previous versions. Are there any plans to fix this bug? ModelOS&Version Y/N version MacbookAir M2 2022 macOS Sonoma 14.4.1 y 17.4.1 Mac Studio 2022 Apple M1 Max macOS Monterey 12.5 n 16.0 MacBook Air M1 2020 macOS Sonoma 14.3.1 n 17.3.1 iPadPro gen6 iPadOS 17.4.1 y - iPad gen10 iPadOS 17.4.1 n - For a demo to check the phenomenon, save the HTML file below and open it in your browser. To reproduce, press the buttons in the order of draw -> clear -> hide. The yellow parent div disappears, whereas a black square appears that I should have cleared from the canvas.
Attachments
Test case from the reporter
(1.00 KB, text/html)
2024-05-16 08:29 PDT
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-16 14:53:45 PDT
<
rdar://problem/128226178
>
Matt Woodrow
Comment 2
2024-05-23 19:54:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29035
EWS
Comment 3
2024-05-24 18:31:26 PDT
Committed
279302@main
(d6114259cba0): <
https://commits.webkit.org/279302@main
> Reviewed commits have been landed. Closing PR #29035 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug