Toggling visibility:hidden on the parent of a <canvas> can cause the previous frame's contents to be shown. https://bugs.webkit.org/show_bug.cgi?id=274262 <rdar://128226178>

Reviewed by NOBODY (OOPS!).

We should only try to use 'copy' compositing mode to transfer the canvas buffer into the layer (and thus
omit any pixel clearing) if there is visible content to copy.

* LayoutTests/compositing/canvas/copy-backing-store-visibility-hidden-expected.html: Added.
* LayoutTests/compositing/canvas/copy-backing-store-visibility-hidden.html: Added.
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateConfiguration):